--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -1,6 +1,9 @@
-.hero .navbar,
-.hero .navbar-menu {
+.hero .navbar {
 	background-color: rgba(0, 0, 0, 0.3);
+}
+
+.hero .navbar-menu {
+	background-color: transparent;
 }
 
 .navbar-burger {
