Great comment overhaul

--- a/src/main/webapp/resources/css/bulma_custom.scss
+++ b/src/main/webapp/resources/css/bulma_custom.scss
@@ -1,3 +1,10 @@
+/*
+ * Used to customize bulma
+ * To run `npm run sass` will create bulma_custom.css
+ * which contains the bulma css framework with custom styles
+ * @author Viktor Alex Brynjarsson (vab18@hi.is)
+ * @date November 2017 
+ */
 // 1. Import the initial variables
 @import "node_modules/bulma/sass/utilities/initial-variables";
 //@import "../sass/utilities/functions";
